--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,6 +1,6 @@
 /* CONSTS */
 :root {
-    --header-height: 54px;
+    --header-height: 60px;
     --footer-height: 160px;
 }
 
@@ -22,10 +22,13 @@
 }
 
 /* NavBar */
-.navbar .container a {
-    color: var(--bs-gray-300);
+.navbar {
+    height: var(--header-height);
+}
+
+.logo-link {
     text-decoration: none;
-    font-weight: 700;
+    margin-right: 1rem;
 }
 
 .navbar .navbar-nav {
@@ -34,7 +37,19 @@
 
 .logo-text {
     font-family: "Dr Sugiyama", cursive;
-    font-size: 24px;
+    font-weight: 700;
+}
+
+.logo-md .logo-text {
+    font-size: 32px;
+}
+
+.logo-sm .logo-text {
+    font-size: 18px;
+}
+
+.logo-xl .logo-text {
+    font-size: 64px;
 }
 
 /* TypeBar */
