--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -133,16 +133,24 @@
 }
 
 /* Notification */
-.notification {
-    position: absolute;
+.notification-container {
+    position: fixed;
     z-index: 10;
     bottom: 5%;
     left: 20px;
     display: flex;
-    justify-content: space-between;
-    transition: all 0.3s;
+    flex-direction: column-reverse;
     width: 100%;
-    max-width: 400px;
+    max-width: 360px;
+}
+
+.notification {
+    position: absolute;
+    left: -400px;
+    display: flex;
+    justify-content: space-between;
+    transition: all 0.2s ease-out;
+    width: 100%;
     height: 75px;
     border-radius: 5px;
     background-color: #ccdfff;
@@ -160,7 +168,7 @@
 }
 
 .notification-text {
-    padding: 4px 12px;
+    padding: 0 24px;
     font-weight: 600;
     align-self: center;
 }
