--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -255,6 +255,7 @@
     color: #c20404;
     text-align: center;
     cursor: pointer;
+    width: 40px;
 }
 
 .delete-btn:active,
@@ -265,6 +266,10 @@
 .image-cell {
     width: 50px;
     padding: 0;
+}
+
+.table .rating-col {
+    width: 65px;
 }
 
 /* Confirmation modal */
