--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -98,13 +98,15 @@
 
 /* DeviceList */
 .device-list-container {
-    margin: 30px;
+    margin: 20px;
 }
 
 /* DeviceItem */
 .card.device-card {
     cursor: pointer;
-    width: 150px;
+    width: 160px;
+    height: 250px;
+    position: relative;
 }
 
 .device-card:hover img {
@@ -112,10 +114,26 @@
     transform: scale(1.05);
 }
 
-.device-price {
+.device-item-image {
     display: flex;
-    justify-content: end;
+    align-self: center;
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+}
+
+.device-price {
     font-weight: 600;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+/* DevicePage */
+.device-page-image {
+    width: 400px;
+    height: 300px;
+    object-fit: contain;
 }
 
 /* BrandBar */
@@ -276,6 +294,13 @@
 
 .image-cell {
     width: 50px;
+    padding: 0;
+}
+
+.device-admin-image {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
     padding: 0;
 }
 
