[main]: go-to-top-button

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -31,6 +31,26 @@
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
+.go-to-top-btn {
+    position: fixed;
+    right: 25px;
+    bottom: 25px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.2s;
+    pointer-events: none;
+    opacity: 0;
+}
+
+.go-to-top-btn-visible {
+    pointer-events: all;
+    opacity: 1;
+}
+
 /* PaginationBar */
 .pagination .page-item .page-link {
     color: var(--bs-gray-300);
