[main]: stub-text-for-shop-page

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -54,6 +54,12 @@
     opacity: 0.5;
 }
 
+.no-products-text {
+    text-align: center;
+    margin-top: 5rem;
+    color: var(--bs-gray-500);
+}
+
 /* PaginationBar */
 .pagination .page-item .page-link {
     color: var(--bs-gray-300);
