--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -403,9 +403,15 @@
 }
 
 .basket-total-price {
-    margin-bottom: 2rem;
     color: var(--bs-gray-600);
     letter-spacing: 0.5px;
+    margin-left: 1rem;
+}
+
+.total-price-container {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 1rem;
 }
 
 .checkbox-wrapper input[type="checkbox"] {
@@ -437,10 +443,20 @@
 
 input.checked::before {
     content: '✓';
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     color: #fff;
     position: absolute;
-    right: 1px;
-    top: -10px;
+    right: 2px;
+    top: -6px;
+}
+
+.price-without-discount {
+    letter-spacing: 0;
+    padding-right: 0.5rem;
+    text-decoration: line-through;
+}
+
+.price-with-discount {
+    color: #047e00;
 }
