--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -451,7 +451,7 @@ input.checked::before {
     top: -6px;
 }
 
-.price-without-discount {
+.strikethrough-price {
     letter-spacing: 0;
     padding-right: 0.5rem;
     text-decoration: line-through;
